--- a/public_html/Styles2/productos.css
+++ b/public_html/Styles2/productos.css
@@ -124,10 +124,11 @@ body {
     --fa-font-brands: normal 400 1em/1 "Font Awesome 6 Brands";
 }
 
-.div_car {
+.div_car, .div_car2 {
     display: inline;
     width: fit-content;
 }
+
 .container_div_car {
     display: inline-flex;
     width: 100%;
